--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "hono": "^4.8.4",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "node-appwrite": "^17.0.0",
